end of a test task

--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,86 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>NoWayOut</title>
   <link rel="stylesheet" href="css/libs.min.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+
+  <header class="header">
+    <div class="header__top">
+      <nav class="header__nav">
+        <div class="header-btn">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        <ul class="header__nav-list">
+          <li class="header__nav-item">
+            <a href="#">Rooms</a>
+          </li>
+          <li class="header__nav-item">
+            <a href="#">Booking</a>
+          </li>
+          <li class="header__nav-item">
+            <a href="#">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="header__logo">
+        <a href="#"><img src="images/logo.svg" alt=""></a>
+      </div>
+      <div class="header__info">
+        <a class="header__phone" href="tel:436606050000">+43 660 605 0000</a>
+        <a class="header_shopping" href="#">
+          <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.97998 17.1149C8.27165 18.5733 9.55498 19.6116 11.0366 19.6116H11.1183H20.9183H20.9766C22.47 19.6116 23.7533 18.5733 24.045 17.1149L25.655 8.64492C25.7133 8.32992 25.62 8.01492 25.41 7.76992C25.2 7.52492 24.885 7.38492 24.5583 7.38492H8.30665L7.46665 3.19659C7.36165 2.69492 6.90665 2.33325 6.36998 2.33325H2.33331V4.45659H5.45998L7.97998 17.1149ZM10.1733 16.7183L8.72665 9.50825V9.49658H23.2283L21.8516 16.7183C21.7583 17.1733 21.3733 17.5233 20.9183 17.4883H11.0833C10.605 17.4766 10.2666 17.1733 10.1733 16.7183Z" fill="#F7F5F9"/>
+            <rect x="10.5" y="22.1667" width="11.6667" height="2.33333" fill="#F7F5F9"/>
+          </svg>
+          <span>2</span>
+        </a>
+        <div class="header__language">
+          <a href="#" class="header__de">DE</a>
+          <a href="#" class="header__en">EN</a>
+        </div>
+      </div>
+    </div>
+    <div class="header__catalog">
+      <a href="#" class="header__catalog-item" style="background-image: url(images/catalog/catalog-item1.jpg);">
+        <div class="catalog-item__title">Da Vinci</div>
+        <div class="catalog-item__genre">Mystery</div>
+      </a>
+      <a href="#" class="header__catalog-item" style="background-image: url(images/catalog/catalog-item2.jpg);">
+        <div class="catalog-item__title">Mission Belvedere</div>
+        <div class="catalog-item__genre">Action</div>
+      </a>
+      <a href="#" class="header__catalog-item" style="background-image: url(images/catalog/catalog-item3.jpg);">
+        <div class="catalog-item__discount" style="background-image: url(images/discount.png);">
+          <div class="discount__amount">20% OFF</div>
+          <div class="discount__time">
+            Limited-time Deal
+            <span>03:34:12</span>
+          </div>
+        </div>
+        <div class="catalog-item__title">School of Magic</div>
+        <div class="catalog-item__genre">Adventure</div>
+      </a>
+      <a href="#" class="header__catalog-item" style="background-image: url(images/catalog/catalog-item4.jpg);">
+        <div class="catalog-item__title">The Unknown</div>
+        <div class="catalog-item__genre">
+          Horror with live actor
+          <img src="images/mask.svg" alt="">
+        </div>
+      </a>
+      <a href="#" class="header__catalog-item" style="background-image: url(images/catalog/catalog-item5.jpg);">
+        <div class="catalog-item__title">The Nun</div>
+        <div class="catalog-item__genre">
+          Horror with live actor
+          <img src="images/mask.svg" alt="">
+        </div>
+      </a>
+    </div>
+  </header>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
