added border for discount item

--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
         <div class="catalog-item__title">Mission Belvedere</div>
         <div class="catalog-item__genre">Action</div>
       </a>
-      <a href="#" class="header__catalog-item" style="background-image: url(images/catalog/catalog-item3.jpg);">
+      <a href="#" class="header__catalog-item discount" style="background-image: url(images/catalog/catalog-item3.jpg);">
         <div class="catalog-item__discount" style="background-image: url(images/discount.png);">
           <div class="discount__amount">20% OFF</div>
           <div class="discount__time">
